@@ -3,14 +3,30 @@ package org.mtr.core.path;
 import it.unimi.dsi.fastutil.objects.Object2ObjectOpenHashMap;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import it.unimi.dsi.fastutil.objects.ObjectOpenHashSet;
+import org.jspecify.annotations.Nullable;
 import org.mtr.core.data.*;
 import org.mtr.core.tool.Angle;
 import org.mtr.core.tool.Utilities;
 import org.mtr.core.tool.Vector;
 
-import javax.annotation.Nullable;
 import java.util.function.BiConsumer;
 
+/**
+ * {@link PathFinder} specialisation that walks the {@link Rail} graph between two
+ * {@link SavedRailBase} endpoints (typically a {@link Siding} and a {@link Platform}) to
+ * produce the route a {@link Vehicle} will follow on a single trip.
+ *
+ * <p>Honours rail directionality, signal-block boundaries and per-{@link TransportMode}
+ * specifics: aeroplane mode in particular requires inbound runways
+ * ({@link #runwaysInbound}) and outbound runways ({@link #runwaysOutbound}) to be reached
+ * via straight-line approaches at {@value #AIRPLANE_SPEED} km/h with at most a
+ * {@value #MAX_AIRPLANE_TURN_ARC}-block turn arc.</p>
+ *
+ * @param <T> the start area type
+ * @param <U> the start saved-rail type owned by {@code T}
+ * @param <V> the end area type
+ * @param <W> the end saved-rail type owned by {@code V}
+ */
 public final class SidingPathFinder<T extends AreaBase<T, U>, U extends SavedRailBase<U, T>, V extends AreaBase<V, W>, W extends SavedRailBase<W, V>> extends PathFinder<SidingPathFinder.PositionAndAngle> {
 
 	public final U startSavedRail;
@@ -21,7 +37,7 @@ public final class SidingPathFinder<T extends AreaBase<T, U>, U extends SavedRai
 	private final Object2ObjectOpenHashMap<Position, Rail> runwaysInbound;
 	private final ObjectOpenHashSet<Position> runwaysOutbound;
 
-	public static final int AIRPLANE_SPEED = 900;
+	public static final int AIRPLANE_SPEED = 300;
 	private static final int MAX_AIRPLANE_TURN_ARC = 128;
 
 	public SidingPathFinder(Data data, U startSavedRail, W endSavedRail, int stopIndex) {
@@ -122,7 +138,7 @@ public final class SidingPathFinder<T extends AreaBase<T, U>, U extends SavedRai
 	public static <T extends AreaBase<T, U>, U extends SavedRailBase<U, T>, V extends AreaBase<V, W>, W extends SavedRailBase<W, V>> void findPathTick(ObjectArrayList<PathData> path, ObjectArrayList<SidingPathFinder<T, U, V, W>> sidingPathFinders, long cruisingAltitude, Runnable callbackSuccess, BiConsumer<U, W> callbackFail) {
 		if (!sidingPathFinders.isEmpty()) {
 			Utilities.loopUntilTimeout(() -> {
-				final SidingPathFinder<T, U, V, W> sidingPathFinder = sidingPathFinders.get(0);
+				final SidingPathFinder<T, U, V, W> sidingPathFinder = sidingPathFinders.getFirst();
 				final ObjectArrayList<PathData> tempPath = sidingPathFinder.tick(cruisingAltitude);
 
 				if (tempPath != null) {
@@ -133,10 +149,10 @@ public final class SidingPathFinder<T extends AreaBase<T, U>, U extends SavedRai
 						return 0;
 					} else {
 						if (overlappingPaths(path, tempPath)) {
-							tempPath.remove(0);
+							tempPath.removeFirst();
 						}
 						path.addAll(tempPath);
-						sidingPathFinders.remove(0);
+						sidingPathFinders.removeFirst();
 						if (sidingPathFinders.isEmpty()) {
 							callbackSuccess.run();
 							return 0;
@@ -165,7 +181,7 @@ public final class SidingPathFinder<T extends AreaBase<T, U>, U extends SavedRai
 		if (path.isEmpty() || newPath.isEmpty()) {
 			return false;
 		} else {
-			return Utilities.getElement(path, -1).isSameRail(newPath.get(0));
+			return Utilities.getElement(path, -1).isSameRail(newPath.getFirst());
 		}
 	}
 
@@ -197,7 +213,7 @@ public final class SidingPathFinder<T extends AreaBase<T, U>, U extends SavedRai
 			final Angle rotateAngle = turnRight ? Angle.SEE : Angle.NEE;
 			tempAngle = tempAngle.add(rotateAngle);
 			final Vector posOffset = new Vector(turnArc, 0, 0).rotateY(-oldTempAngle.angleRadians - rotateAngle.angleRadians / 2);
-			tempPos = oldTempPos.offset(Math.round(posOffset.x), Math.round(posOffset.y), Math.round(posOffset.z));
+			tempPos = oldTempPos.offset(Math.round(posOffset.x()), Math.round(posOffset.y()), Math.round(posOffset.z()));
 
 			if (reverse) {
 				tempRailPath.add(0, getAirplanePathData(tempPos, tempAngle.getOpposite(), oldTempPos, oldTempAngle, stopIndex));
@@ -211,29 +227,22 @@ public final class SidingPathFinder<T extends AreaBase<T, U>, U extends SavedRai
 
 	private static PathData getAirplanePathData(Position position1, Angle angle1, Position position2, Angle angle2, int stopIndex) {
 		return new PathData(Rail.newRail(
-				position1, angle1, position2, angle2,
-				Rail.Shape.QUADRATIC, 0, new ObjectArrayList<>(), AIRPLANE_SPEED, 0,
-				false, false, true, false, false, TransportMode.AIRPLANE
+			position1, angle1, position2, angle2,
+			Rail.Shape.QUADRATIC, 0, 0,
+			0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
+			new ObjectArrayList<>(), AIRPLANE_SPEED, 0,
+			false, false, true, false, false, TransportMode.AIRPLANE
 		), 0, 0, stopIndex, position1, position2);
 	}
 
-	protected static class PositionAndAngle {
-
-		private final Position position;
-		@Nullable
-		private final Angle angle;
-
-		private PositionAndAngle(Position position, @Nullable Angle angle) {
-			this.position = position;
-			this.angle = angle;
-		}
+	protected record PositionAndAngle(Position position, @Nullable Angle angle) {
 
 		@Override
 		public boolean equals(Object obj) {
 			if (obj instanceof PositionAndAngle) {
 				return position.equals(((PositionAndAngle) obj).position) && (angle == null || ((PositionAndAngle) obj).angle == null || angle == ((PositionAndAngle) obj).angle);
 			} else {
-				return super.equals(obj);
+				return false;
 			}
 		}
 
